--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "bootstrap": "^4.6.1",
     "react": "^18.0.0",
     "react-bootstrap": "^1.6.4",
+    "react-bootstrap-icons": "^1.8.1",
     "react-dom": "^18.0.0",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
